@@ -41,7 +41,6 @@ my $builder = $class->new(
         'Term::ReadLine::Gnu' => '1.44',
         'PadWalker'           => '2.5',
         'Class::Tiny'         => '1.008',
-        'Module::Functions'   => '2.1.3',
     },
     add_to_cleanup => [ 'Runtime-Debugger-*', 'build_dir/', 'MANIFEST*.bak' ],
     meta_merge     => {
