@@ -10,6 +10,7 @@ Fixed some edge case issues.
 Test cases work now with lexical values.
 Improved array and hash completions.
 Finished main tests.
+Remove dependency: Module::Functions.
 
 ====
 0.09
